Fixed gap between bottom section and content

--- a/css/home.less
+++ b/css/home.less
@@ -176,7 +176,7 @@ nav.secondary-nav ul li:last-child a span{
   background: @bg-gray;
   border: @border-right;
   border-radius: 2px;
-  margin: 13px @margenes;
+  margin: 0 @margenes 8px;
 }
 
 
